# MaxieStarfieldScripts

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/: bs.h  bsa.h  cdb.h  crc.h  esp.h  mat.h  nif.h  paths.h  types.h  util.h
res/: bones.json
src/: CdbToJson.cpp  DumpDb.cpp  ExtendNif.cpp  GetCrc.cpp  JsonToCdb.cpp  bsa.cpp  crc.cpp  mat.cpp  nif.cpp  paths.cpp  util.cpp
